# DelGame_Cmake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: auto-release.yml
src/: main.cpp
version-control/: auto-commit.bat  increment_version.py  merge-feature.bat  new-feature.bat  release-tag.bat  summarize_diff.py  update-version.bat
